Win Native Notifications: Don't abort if AllowSetForegroundWindow fails.

It may have unwanted side-effects in the Action Center and is really
a benign failure.

Bug: 841475, 837796, 734095
Change-Id: I61cc2736742a50de72fd5a5b9c87ae233ff9a5f0
Reviewed-on: https://chromium-review.googlesource.com/1061414
Commit-Queue: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559508}
Former-commit-id: 31f8df48a7c5bcc8050c636ff0fa60b2bcecbf04